# practical_stats_book

./: .gitignore  README.md
sim/: Makefile  Untitled.ipynb  build.zig  build.zig.zon
sim/C/: Makefile  chap1  chap1.c  chap1_test.c  chap1_test.py  mymodule.c  pyproject.toml  setup.py  slice.c  test.c  test.py
sim/C/lab/: test.py
sim/C/py_tests/: chap1_test.py
sim/C/src/: chap1.c  chap1_test.c
sim/C/src/mylib/: common.c  slice.c
sim/Zig/: Makefile
sim/Zig/src/: chap1.zig
sim/src/: chap1.zig  main.zig
